--- a/Code2Night.csproj
+++ b/Code2Night.csproj
@@ -105,6 +105,7 @@
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Facebook" Version="7.0.6" />
     <PackageReference Include="Google.Apis.Calendar.v3" Version="1.49.0.2086" />
+    <PackageReference Include="GroupDocs.Viewer" Version="20.12.0" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.1.7" />
@@ -132,6 +133,11 @@
     <PackageReference Include="MimeKit" Version="2.9.2" />
     <PackageReference Include="MimeMapping" Version="1.0.1.30" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Reflection" Version="4.3.0" />
+    <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
   </ItemGroup>
 
